# openglRendering

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  glRendering.sublime-workspace  resourceCopy.py
ext/PCG/: CMakeLists.txt
ext/gl/: CMakeLists.txt
ext/gl/src/: gl_cpp.cpp
ext/imgui/: CMakeLists.txt  imconfig.h  imgui_convenience.cpp  imgui_convenience.h  imgui_glfw.cpp
glRendering/: CMakeLists.txt
glRendering/include/: buffer.h  camera.h  curve.h  enums.h  glfwApplication.h  glfwCallbacks.h  image.h  inputManager.h  renderer.h  serviceLocator.h  shader.h  shapes.h  texture.h  uniformBlocks.h  vertex.h  vertexArray.h
glRendering/src/: camera.cpp  framebuffer.cpp  glfwApplication.cpp  glfwCallbacks.cpp  image.cpp  main.cpp  renderBatch.cpp  renderer.cpp  shader.cpp  shapes.cpp  texture.cpp  textureView.cpp  vertexArray.cpp
include/: CMakeLists.txt  batchRenderer.h  buffer.h  camera.h  clock.h  curve.h  files.h  glUtility.h  glfwApplication.h  image.h  inputManager.h  interpolation.h  linalg.h  randomEngine.h  renderBatch.h  renderer.h  shader.h  shapes.h  texture.h  textureView.h  transformation.h  uniformBlocks.h  vertex.h  vertexArray.h
include/ext/: stb_image.h
modules/computation/: CMakeLists.txt
modules/computation/src/: interpolation.cpp
modules/utility/: CMakeLists.txt
modules/utility/include/: files.h  logging.h
modules/utility/src/: files.cpp  logging.cpp
res/: curve.vs  frag.frag  frag.fs  vertex.vert  vertex.vs
src/: CMakeLists.txt  batchRenderer.cpp  camera.cpp  clock.cpp  curve.cpp  files.cpp  glUtility.cpp  glfwApplication.cpp  glfwCallbacks.cpp  image.cpp  interpolation.cpp  main.cpp  randomEngine.cpp  renderer.cpp  shader.cpp  shapes.cpp  texture.cpp  textureView.cpp  transformation.cpp  uniformBlocks.h  vertexArray.cpp
src/ext/: stb_image.cpp
